<resources>
    <string name="app_name">Keros CheckIn</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="circle">Circle</string>
    <string name="rectangle">Rectangle</string>
    <string name="create_new_member_fab">Create new member fab.</string>
    <string name="no_member_attendance_data">Looks like you haven\'t added any member yet.</string>
    <string name="name_too_short">Name too short!</string>
    <string name="entry_added">Created !</string>
    <string name="entry_updated">Updated !</string>
    <string name="still_has_members">This region still has members, edit instead.</string>
    <string name="region_deleted">Region deleted.</string>
    <string name="action_update">Update</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="other_names">Other Names (Optional)</string>
    <string name="phone_number">Phone Number (Optional)</string>
    <string name="add_member">Add Member</string>
    <string name="create_new_member">Create new member</string>
    <string name="member_created">Member added!</string>
    <string name="checkin_status_icon">CheckIn status icon</string>
    <string name="checkin">Check-In</string>
    <string name="edit">Edit</string>
    <string name="him_reference"> &#160;him&#160;</string>
    <string name="her_reference"> &#160;her&#160;</string>
    <string name="them_reference"> &#160;them&#160;</string>
    <string name="previously_inactive_prompt">%s  was previously marked as inactive. \n
        Would you wish to update as active and check %s In?
    </string>
    <string name="higher_than_accepted_temp">%s ºC is higher than accepted.</string>
    <string name="lower_than_accepted_temp">%s ºC is lower than accepted.</string>
    <string name="already_checked_in_prompt">%s already checked-In %s</string>
    <string name="member_updated">Member Updated!</string>
    <string name="all_regions">All Regions</string>
    <string name="no_member_in_region">No member.</string>
    <string name="one_member">One member.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="delete_member">Delete Member</string>
    <string name="confirm">Confirm</string>
    <string name="recorded_temperature_c">Recorded temperature (ºC)</string>
    <string name="arrival_time">Arrival time</string>
    <string name="arrival_time_alert">Selection should be earlier than this time.</string>
    <string name="helper_custom_arrival_time">Tap to change time if arrival is earlier than this.</string>
    <string name="settings_icon">Settings icon</string>
    <string name="general_header">General</string>
    <string name="sync_header">Sync</string>
    <string name="org_title">Organization Name</string>
    <string name="invalidate_period">Invalidate check-in period</string>
    <string name="organization_name_key">organization_name_key</string>
    <string name="invalidate_period_key">invalidate_period_key</string>
    <string name="too_long_ago">That\'s too long ago! Consider changing invalidation period in settings.</string>
    <string name="hide_members_preference">Hide inactive members</string>
    <string name="hide_members_summary">Do not show inactive members in list.</string>
    <string name="invalidate_period_summary">Time until next check-in can be considered fresh.</string>
    <string name="inactive_members_pref_key">inactive_members_pref_key</string>
    <string name="minimum_accepted_temperature_key">minimum_accepted_temperature_key</string>
    <string name="maximum_accepted_temperature_key">maximum_accepted_temperature_key</string>
    <string name="member_is_still_active">Member is still active.</string>
    <string name="reports">Reports</string>
    <string name="generate_reports_for">Generate reports for</string>
    <string name="attendance">Attendance</string>
    <string name="present_checked_in">Present(Checked-In)</string>
    <string name="absent">Absent</string>
    <string name="sex">Sex</string>
    <string name="all">All</string>
    <string name="activity">Activity</string>
    <string name="include_inactive_members">Include inactive members</string>
    <string name="generate">Generate</string>
    <string name="included_fields">Included Fields</string>
    <string name="phone">Phone</string>
    <string name="temperature">Temperature</string>
    <string name="yob">Year of Birth eg. 1998</string>
    <string name="check_in_time">Check-In time</string>
    <string name="region">Region</string>
    <string name="other_sex">Other</string>
    <string name="age">Age</string>
    <string name="help">Help</string>
    <string name="version_number">version_number</string>
    <string name="export_import">export_import</string>
    <string name="clean_up">clean_up</string>
    <string name="join_support">assistance</string>
    <string name="import_data">Import</string>
    <string name="export_data">Export</string>
    <string name="import_context">Use when another device is already setup and would wish to use this as new device with same data.</string>
    <string name="export_context">Best suited for transferring data for setting up other new devices.</string>
    <string name="_1_both_entries_include_regions_by_default">Both entries include regions by default.</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="guest_region"> guest region </string>
    <string name="app_version_mismatch_import"><![CDATA[You have version %s installed while this file was exported from an app version %s.
     <br/><br/>This may not work.]]></string>
    <string name="summary_export">Will export %s with %s"</string>
    <string name="empty_export">No data</string>
    <string name="empty_export_message">Seems like you have not added any regions/members.</string>
    <string name="export_option">Export</string>
    <string name="export_regions_members"><![CDATA[Export regions & members]]></string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_error_template">An error occurred while doing that. Report this : %s</string>
    <string name="make_selection_import_export">Please select one.</string>
    <string name="summary_import_confirmation_text">Found %s and %s. Proceed to import?</string>
    <string name="summary_string">Summary</string>
    <string name="proceed">Proceed</string>
    <string name="replace_strategy">Replace</string>
    <string name="merge_strategy">Merge</string>
    <string name="married_status">Married</string>
    <string name="not_married_status">Not Married</string>
    <string name="add_region">Add Region</string>
    <string name="create_new_region_fab">Create new region fab</string>
    <string name="close_dialog">Close</string>
    <string name="unable_to_import_title">Unable to import</string>
    <string name="import_error_message">Seems like this is not a valid data export file.</string>
    <string name="unable_to_export_title">Unable to Export</string>
    <string name="unable_to_export_message">Could not create export file from your existing entries.</string>
    <string name="version_mismatch_title">Version Mismatch</string>
    <string name="delete_all_option">All (Regions &amp; Members)</string>
    <string name="wipe_data_message"><![CDATA[Choose an entry to clean up, this cannot be undone. <br/> Your PIN will be required.]]></string>
    <string name="wipe_data_dialog_title">Select Entries To Delete</string>
    <string name="delete_data_button_text">Delete</string>
    <string name="undo_deletion">Undo</string>
    <string name="deletion_suffix">%s deleted.</string>
    <string name="operation_not_completed">Operation Not Completed</string>
    <string name="none_was_deleted">None was deleted.</string>
    <string name="nothing_to_delete">Nothing to delete.</string>
    <string name="operation_cancelled">Operation Cancelled.</string>
    <string name="delete_all_snack_message">%s and %s deleted.</string>
    <string name="marital_status_constraint">Indicate: Marital status</string>
    <string name="settings">Settings</string>
    <string name="range_selector_for_age_groups">Range selector for age groups.</string>
    <string name="married_individual_is_an_adult">Married youth is an adult.</string>
    <string name="summary">Summary</string>
    <string name="kids_0_13">Kids 0 – 13</string>
    <string name="youth_14_35">Youth 14 – 35</string>
    <string name="adults_36_81">Adults 36 – 81</string>
    <string name="share_summary_txt">Share</string>
    <string name="copy_summary_txt">Copy</string>
    <string name="export_full_report">Export Full Report</string>
    <string name="close_report_summary_output">Close report summary output</string>
    <string name="kids_template">Kids %d – %d</string>
    <string name="youths_template">Youths %d – %d</string>
    <string name="adults_template">Adults %d – %d</string>
    <string name="summary_report_text"><b><big><u>Total %d</u></big></b> \n\n
                <b>Cumulative kids %d </b>\n
                \tMale  %d\n
                \tFemale  %d\n
                \tOther sex  %d \n\n

                <b>Cumulative youths %d</b>\n
                &#160;Male  %d\n
                &#160;Female  %d\n
                &#160;Other sex  %d\n\n

                <b>Cumulative adults %d</b>\n
                &#160;Male  %d\n
                &#160;Female  %d\n
                &#160;Other sex  %d</string>
    <string name="copied_to_clipboard">Copied to clipboard!</string>
    <string name="report_summary_heading">Report Summary</string>
    <string name="send_the_summary_button">Send the summary</string>
    <string name="copt_to_clipboard_description">Copy summary to clipboard</string>
    <string name="success_import_operation_title">Success</string>
    <string name="success_import_operation_message">%s and %s imported.</string>
    <string name="save_option_export">Save</string>
    <string name="null_uri_message_to_user_save_file">Did you save the file?</string>
    <string name="workbok_no_initialized_message">Export file was not prepared.</string>
    <string name="failed_operation_dialog_title">Failed</string>
    <string name="unable_to_import_new_entries">Unable to import new entries.</string>
    <string name="unable_to_import_found_entries_message">Something unexpected happened.</string>
    <string name="close_nerge_options_btn_text">Close merge options</string>
    <string name="here_s_what_we_can_do">Here\'s what we can do</string>
    <string name="merge_option_icon_safer">Merge option icon - safer.</string>
    <string name="merge">Merge</string>
    <string name="merge_context_message">This will keep all your existing data and try to add the imported ones.</string>
    <string name="replace_data_option_icon">Replace data option icon.</string>
    <string name="replace_imports_button_text">Replace</string>
    <string name="clean_up_context_message">This option will clean your existing data and add the newly imported ones. \nYou will loose existing entries.</string>
    <string name="merge_header_message">You have %s and %s to be imported while your device already contains %s and %s.</string>
    <string name="tab_content_description">All members and yet to check in members.</string>
    <string name="date_place_holder_in_reports">27 - Oct - 2021</string>
    <string name="arrival_time_clock">Arrival time clock</string>
    <string name="merge_entries">Merge entries</string>
    <string name="replace_entries">Replace entries</string>
</resources>