<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/img_btn_close_merge_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_12"
            android:background="@color/float_transparent"
            android:contentDescription="@string/close_nerge_options_btn_text"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/primaryColor" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/summary_heading"
            style="@style/TextAppearance.MaterialComponents.Overline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:fontFamily="@font/helveticaneue"
            android:padding="@dimen/dimen_6"
            android:text="@string/merge_header_message"
            app:layout_constraintTop_toBottomOf="@id/img_btn_close_merge_options" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/here_is_what_to_do"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helveticaneue"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/here_s_what_we_can_do"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/summary_heading" />

        <ImageView
            android:id="@+id/merge_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="12dp"
            android:contentDescription="@string/merge_option_icon_safer"
            android:src="@drawable/ic_baseline_merge_entries_24"
            app:layout_constraintEnd_toStartOf="@id/merge_explanation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/merge_header" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/merge_header"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/merge"
            app:layout_constraintStart_toStartOf="@id/merge_explanation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/merge_icon"
            app:layout_constraintTop_toBottomOf="@id/here_is_what_to_do" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/merge_explanation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/helveticaneue"
            android:paddingStart="12dp"
            android:paddingEnd="4dp"
            android:text="@string/merge_context_message"
            style="@style/TextAppearance.Material3.BodySmall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/merge_icon"
            app:layout_constraintTop_toBottomOf="@id/merge_header" />

        <ImageView
            android:id="@+id/replace_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="12dp"
            android:contentDescription="@string/replace_data_option_icon"
            android:src="@drawable/ic_baseline_import_replace_24"
            app:layout_constraintEnd_toStartOf="@id/replace_explanation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/replace_header"
            app:tint="@android:color/holo_red_dark" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/replace_header"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/replace_imports_button_text"
            app:layout_constraintStart_toStartOf="@id/replace_explanation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/replace_icon"
            app:layout_constraintTop_toBottomOf="@id/merge_explanation" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/replace_explanation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/helveticaneue"
            android:paddingStart="12dp"
            android:paddingEnd="4dp"
            android:text="@string/clean_up_context_message"
            style="@style/TextAppearance.Material3.BodySmall"
            android:paddingBottom="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/replace_icon"
            app:layout_constraintTop_toBottomOf="@id/replace_header" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/replace"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/replace_strategy"
            android:contentDescription="@string/replace_entries"
            app:icon="@drawable/ic_baseline_import_replace_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/merge"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/replace_explanation" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/merge"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/merge_strategy"
            android:contentDescription="@string/merge_entries"
            app:icon="@drawable/ic_baseline_merge_entries_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/replace"
            app:layout_constraintTop_toBottomOf="@+id/replace_explanation" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>